2008-10-20  Gil Forcada  <gforcada@gnome.org>

	* gnome-modules.xml.in:
	* releases.xml.in:
	evince branched for GNOME 2.24.

2008-10-21  Claude Paroz  <claude@2xlibre.net>

	* releases.xml.in: Added correct branch for packagekit.

2008-10-20  Gil Forcada  <gforcada@gnome.org>

	* gnome-modules.xml.in:
	* releases.xml.in:
	gnome-utils branched for GNOME 2.24.

2008-10-20  Jordi Mallach  <jordi@sindominio.net>

	* translation-teams.xml.in: rename Valencian-Catalan to
	Valencian (Southern Catalan).

2008-10-20  Gil Forcada  <gforcada@gnome.org>

	* gnome-modules.xml.in:
	* releases.xml.in:
	libgnome branched for GNOME 2.24.

2008-10-20  Gil Forcada  <gforcada@gnome.org>

	* gnome-modules.xml.in:
	Added Ross and Thomas as maintainers.
	* people.xml.in:
	Added Ross and Thomas.

2008-10-19  Gil Forcada  <gforcada@gnome.org>

	* gnome-modules.xml.in:
	* people.xml.in:
	Added ~10 maintainers :)

2008-10-19  Gil Forcada  <gforcada@gnome.org>

	* gnome-modules.xml.in:
	* releases.xml.in:
	at-spi, atk and gnome-icon-theme has been branched for GNOME 2.24.

2008-10-18  Gil Forcada  <gforcada@gnome.org>

	* gnome-modules.xml.in:
	* releases.xml.in:
	* people.xml.in:
	Added Contacts, Tasks and Dates to gnome-extras and added Chris Lord in people.xml.in.

2008-10-16  Claude Paroz  <claude@2xlibre.net>

	* gnome-modules.xml.in:
	* releases.xml.in: orca branched for 2.24.

2008-10-15  Claude Paroz  <claude@2xlibre.net>

	* templates/language-release.tmpl: Include the mdash in the translatable
	string.
	Fixes #541683.

2008-10-15  Claude Paroz  <claude@2xlibre.net>

	* people.xml.in:
	* translation-teams.xml.in: New Latin translation team.

2008-10-14  Claude Paroz  <claude@2xlibre.net>

	* gnome-modules.xml.in:
	* releases.xml.in: eog, vinagre and gdm branched for 2.24.

2008-10-09  Claude Paroz  <claude@2xlibre.net>

	* gnome-modules.xml.in:
	* releases.xml.in: accerciser branched for 2.24, new stable branch for
	gimp (gimp-2-6).

2008-10-08  Claude Paroz  <claude@2xlibre.net>
