@@ -2021,6 +2021,10 @@
     <branch id="HEAD"/>
   </module>
 
+  <module id="tasque">
+     <branch id="HEAD"/>
+  </module>
+
   <module id="tomboy">
     <branch id="HEAD" stringfrozen="false"/>
     <branch id="gnome-2-16" stringfrozen="true"/>
