@@ -262,6 +262,7 @@
     <!-- dead? <module id="sodipodi"/> -->
     <module id="straw"/>
     <module id="tasks"/>
+    <module id="tasque"/>
     <module id="tracker"/>
     <module id="xchat-gnome"/>
     <module id="xdg-user-dirs-gtk"/>
