@@ -2,6 +2,12 @@
 
 	* gnome-modules.xml.in:
 	* releases.xml.in:
+	Added tasque to gnome-extras.
+
+2008-10-20  Gil Forcada  <gforcada@gnome.org>
+
+	* gnome-modules.xml.in:
+	* releases.xml.in:
 	evince branched for GNOME 2.24.
 
 2008-10-21  Claude Paroz  <claude@2xlibre.net>
